# -------6

./: .env.example  PROJECT6_README.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.kiro/steering/: product.md  structure.md  tech.md
src/outdoor_mcp/: __main__.py  server.py
src/outdoor_mcp/core/: cache.py  exceptions.py  http.py  logging.py  rate_limiter.py  settings.py
src/outdoor_mcp/models/: common.py  conditions.py  location.py  risk.py
src/outdoor_mcp/providers/: base.py  nps.py  openweather.py  overpass.py
src/outdoor_mcp/services/: conditions_service.py  location_service.py  risk_service.py
src/outdoor_mcp/tools/: schemas.py
src/outdoor_mcp/utils/: ids.py
tests/integration/: test_import_and_tools.py
tests/unit/: test_cache.py  test_risk_scoring.py
