[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outdoor-intelligence-mcp"
version = "0.1.0"
description = "Production-grade Outdoor Intelligence MCP Server (stdio) with multi-provider fusion, caching, observability, and risk scoring."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Ester Bloch"}]
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[project.scripts]
outdoor-intelligence-mcp = "outdoor_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
